[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Menus/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/DefaultTheme.tres" type="Theme" id=2]

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 120.0
margin_top = 46.0
margin_right = 200.0
margin_bottom = 133.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "GAME OVER"
align = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 80.0
margin_bottom = 39.0
rect_min_size = Vector2( 80, 20 )
theme = ExtResource( 2 )
text = "New Game"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 80.0
margin_bottom = 63.0
rect_min_size = Vector2( 80, 20 )
theme = ExtResource( 2 )
text = "Load Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 80.0
margin_bottom = 87.0
rect_min_size = Vector2( 80, 20 )
theme = ExtResource( 2 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
